...
                            <constraint firstItem="Usj-3Z-lRK" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="cI8-My-2km"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Imaginarium" id="8Ij-I8-jOC">
                        <barButtonItem key="backBarButtonItem" title="Back" id="nAh-o8-KYd"/>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="240.80000000000001" y="118.29085457271366"/>
...
