...
                                        <connections>
                                            <action selector="stackView:" destination="in2-Lm-IVV" eventType="touchUpInside" id="fZf-Ej-kXd"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Cj-4c-OKU">
                                        <rect key="frame" x="0.0" y="38" width="229" height="30"/>
                                        <state key="normal" title="Without StackView LightManager"/>
                                        <connections>
                                            <action selector="withoutStackView:" destination="in2-Lm-IVV" eventType="touchUpInside" id="a0w-rT-QPc"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
